# odin_web

./: .dependency-cruiser.json  .gitattributes  .gitignore  .prettierignore  .stylelintrc.json  README.md  capacitor.config.ts  drizzle.config.ts  eslint.config.mjs  index.html  knip.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite-plugin-sql-raw.ts  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/: copilot-assets-index.md  copilot-instructions.md
.github/instructions/: codex-context.instructions.md  skills-copilot.instructions.md  universal.instructions.md
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
design_exploration/: fetch_previewer.py  index.html
design_exploration/design_previewer/: README.md  generate-manifest.ps1  previewer.css  previewer.js  previewer_manifest.py  pyproject.toml  setup_previewer.cmd  setup_previewer.py
design_exploration/design_previewer/design_previewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
design_exploration/designs_claude/: common.js  design-06-tactical-hud.html  design-08-mission-control.html  design-10-racing-telemetry.html  index.html
design_exploration/designs_gemini/: common.css  common.js  design-01-cyber-deck.html  design-02-field-ops.html  design-05-brutalist-raw.html  design-08-terminal-velocity.html  design-09-rune-stone.html
design_exploration/designs_gpt/: design-01-mech-bay-calibration.html  (+10 more)
scripts/: build-icon-inputs.mjs  patch-adaptive-icons.mjs  rebuild-phone.mjs
src/: App.vue  main.ts
(+250 files in other folders)
